language/move-lang/tests/move_check/expansion/duplicate_module.exp
error: 

   ┌── tests/move_check/expansion/duplicate_module.move:1:8 ───
   │
 2 │ module M {}
   │        ^ Duplicate definition for module '0000000000000000000000000000000000000000000000000000000008675309.M'
   ·
 1 │ module M {}
   │        - Previously defined here
   │

